Add random text handling , Add no input value handling, both with window alert,  playing with different api in the console

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- HEADER -->
     <header class="header">
-        <h1 class="header__main">.EasyWeatherCheck.</h1>
+        <h1 class="header__main">.WeatherCheck.</h1>
         <canvas class="background"></canvas>
     </header>
 
